# recommender_sys

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: bench.py
src/recsys/: train.py  train_tt.py
src/recsys/api/: main.py
src/recsys/data/: dataset.py  prepare.py
src/recsys/eval/: metrics.py
src/recsys/models/: mf.py  two_tower.py
tests/unit/: test_api.py  test_metrics.py  test_models.py  test_prepare.py
