[project]
name = "recsys"
version = "0.1.0"
description = "Movie recommender system using combination of two-tower retrieval + FAISS ANN + FastAPI serving"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Jason Maharjan"}]

dependencies = [
    "torch>=2.5.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "scikit-learn>=1.5.0",
    "faiss-cpu>=1.8.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "redis>=5.0.0",
    "structlog>=24.4.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "tqdm>=4.66.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "types-redis>=4.6.0",
    "pandas-stubs>=2.2.0",
]

[project.scripts]
recsys-prepare = "recsys.data.prepare:main"
recsys-train = "recsys.train:main"
recsys-train-tt = "recsys.train_tt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recsys"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "UP",       # pyupgrade
    "N",        # pep8-naming
    "SIM",      # flake8-simplify
    "RUF",      # ruff-specific
    "PL",       # pylint
    "TID",      # flake8-tidy-imports
    "PTH",      # flake8-use-pathlib
    "PD",       # pandas-vet
]
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["faiss.*", "prometheus_fastapi_instrumentator.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=recsys",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
asyncio_mode = "auto"
markers = [
    "slow: tests that take >1s",
    "integration: tests that hit external services",
]

[tool.coverage.run]
branch = true
source = ["src/recsys"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
